--- a/src/translations/es/LC_MESSAGES/messages.po
+++ b/src/translations/es/LC_MESSAGES/messages.po
@@ -7,9 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2015-11-24 00:41+0100\n"
-"PO-Revision-Date: 2015-11-24 00:47+0100\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2015-11-24 14:52+0100\n"
+"PO-Revision-Date: 2015-11-24 14:59+0100\n"
 "Language: es\n"
 "Language-Team: es <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -17,15 +16,20 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.1.1\n"
-"X-Generator: Poedit 1.5.4\n"
+"Last-Translator: \n"
+"X-Generator: Poedit 1.8.6\n"
 
-#: src/m2w_app.py:66
+#: src/m2w_app.py:76
 msgid "<h2>It seems we cannot connect to some service.</h2>"
 msgstr "<h2>Parece que no podemos conectar con alguno de los servicios.</h2>"
 
-#: src/m2w_app.py:73
+#: src/m2w_app.py:83
 msgid "<h2>We don't know what happened.</h2>"
 msgstr "<h2>No sabemos qué ha pasado.</h2>"
+
+#: src/utils.py:158
+msgid "Edit"
+msgstr "Editar"
 
 #: src/templates/about.html:23 src/templates/wiki.html:32
 msgid "Go to map"
@@ -45,52 +49,28 @@ msgid "You can navigate the map to go to the location you want."
 msgstr "Puedes navegar por el mapa para ir al lugar que desees."
 
 #: src/templates/about.html:33
-msgid ""
-"When the marker is located over a street you want to know more info click on "
-"the <b>Search wiki</b> button."
-msgstr ""
-"Cuando el marcador esté localizado sobre la calle sobre la que deseas "
-"conocer más puede pulsar en el botón <b>Busca en la wiki</b>."
+msgid "When the marker is located over a street you want to know more info click on the <b>Search wiki</b> button."
+msgstr "Cuando el marcador está localizado sobre la calle sobre la que deseas conocer más puedes pulsar en el botón <b>Busca en la wiki</b>."
 
 #: src/templates/about.html:34
-msgid ""
-"Alternatively, you can click on the <b>Get my position</b> button to get the "
-"location from your browser and, later, click on the <b>Search wiki</b> "
-"button."
-msgstr ""
-"Como alternativa, puedes pulsar sobre el botón <b>Obtener mi posición</b> "
-"para obtener la posición a partir del navegador y, posteriormente, pulsar en "
-"el botón <b>Busca en la wiki</b>."
+msgid "Alternatively, you can click on the <b>Get my position</b> button to get the location from your browser and, later, click on the <b>Search wiki</b> button."
+msgstr "Como alternativa, puedes pulsar sobre el botón <b>Obtener mi posición</b> para obtener la posición a partir del navegador y, posteriormente, pulsar en el botón <b>Busca en la wiki</b>."
 
 #: src/templates/about.html:35
-msgid ""
-"The app will try to provide you with some information extracted from the "
-"wikipedia."
-msgstr ""
-"La aplicación intentará darte información relacionada a partir de la "
-"wikipedia."
+msgid "The app will try to provide you with some information extracted from the wikipedia."
+msgstr "La aplicación intentará darte información relacionada a partir de la wikipedia."
 
 #: src/templates/about.html:36
 msgid "Motivation"
 msgstr "Motivación"
 
 #: src/templates/about.html:37
-msgid ""
-"The other day I was waiting for a friend and during that time I thought -I "
-"have no idea who is Juan Bravo-."
-msgstr ""
-"El otro día estaba esperando a un amigo y mientras esperaba pensé -No tengo "
-"ni idea de quién es Juan Bravo-."
+msgid "The other day I was waiting for a friend and during that time I thought -I have no idea who is Juan Bravo-."
+msgstr "El otro dí­a estaba esperando a un amigo y mientras esperaba pensé -No tengo ni idea de quién es Juan Bravo-."
 
 #: src/templates/about.html:38
-msgid ""
-"Why not open your browser and go directly to the Wikipedia? Because this way "
-"I do not learn about Nominatim, Wikipedia API, Flask, Openlayers, Brython, "
-"CSS hell,..."
-msgstr ""
-"¿Por qué no abrir el nvegador e ir directamente a la wikipedia? Porque de "
-"esa forma no hubiera aprendido sobre Nominatim, la API de la wikipedia, "
-"Flask, Openlayers, Brython, el infierno CSS,..."
+msgid "Why not open your browser and go directly to the Wikipedia? Because this way I do not learn about Nominatim, Wikipedia API, Flask, Openlayers, Brython, CSS hell,..."
+msgstr "¿Por qué no abrir el nvegador e ir directamente a la wikipedia? Porque de esa forma no hubiera aprendido sobre Nominatim, la API de la wikipedia, Flask, Openlayers, Brython, el infierno CSS,..."
 
 #: src/templates/index.html:68
 msgid "Search wiki"
